Chasing a overflow bug. Reset styling for nav ul

--- a/styles.css
+++ b/styles.css
@@ -82,10 +82,7 @@
 }
 
 nav ul {
-    margin:0;
-    padding:0;
-    list-style: none;
-    float: right;
+   
 }
 
 nav li {
